--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -38,5 +38,5 @@ jobs:
         with:
           context: .
           push: true
-          tags: ghcr.io/${{ github.repository_owner }}/container-modsem:latest
+          tags: ghcr.io/kss2k/container-modsem:latest
           file: ./Dockerfile
