--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,8 +15,15 @@ jobs:
     permissions:
       contents: read
       packages: write
-
+    
     steps:
+
+      - name: set lower case owner name 
+        run: |
+            echo "OWNER_LC=${OWNER,,}" >>${GITHUB_ENV}
+        env:
+            OWNER: '${{ github.repository_owner }}'
+
       - name: Check out repository
         uses: actions/checkout@v4
 
@@ -38,5 +45,5 @@ jobs:
         with:
           context: .
           push: true
-          tags: ghcr.io/kss2k/container-modsem:latest
+          tags: ghcr.io/${{ OWNER_LC }}/container-modsem:latest
           file: ./Dockerfile
