--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,15 +15,8 @@ jobs:
     permissions:
       contents: read
       packages: write
-    
+
     steps:
-
-      - name: set lower case owner name 
-        run: |
-            echo "OWNER_LC=${OWNER,,}" >>${GITHUB_ENV}
-        env:
-            OWNER: '${{ github.repository_owner }}'
-
       - name: Check out repository
         uses: actions/checkout@v4
 
@@ -45,5 +38,5 @@ jobs:
         with:
           context: .
           push: true
-          tags: ghcr.io/${{ OWNER_LC }}/container-modsem:latest
+          tags: ghcr.io/${{ github.repository_owner | toLower }}/container-modsem:latest
           file: ./Dockerfile
