--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -8,6 +8,8 @@ on:
     paths:
       - 'Dockerfile'
       - '.github/workflows/docker-image.yml'
+  schedule:
+      - cron: '0 0 * * *' # Runs at 00:00 UTC every day
 
 jobs:
   build-push:
