--- a/.github/workflows/clone.yml
+++ b/.github/workflows/clone.yml
@@ -1,6 +1,9 @@
 name: GitHub Clone Count Update Everyday
 
 on:
+  push:
+    branches:
+      - main
   schedule:
     - cron: "0 */24 * * *"
   workflow_dispatch:
